--- a/main.css
+++ b/main.css
@@ -1,3 +1,48 @@
 body{
     background-color: beige;
 }
+.nav {
+    display: flex;
+    background-color: blanchedalmond;
+    height: 20px;
+}
+.nav ul {
+    margin: 0 10px;
+    list-style-type: none;
+    list-style: none;
+    display: flex;
+    gap: 50px;
+    
+}
+#futbol{
+    width: 70%;
+    float: inline-start;
+}
+#playas{
+    width: 70%;
+    float: inline-end;
+}
+#cristo{
+    width: 70%;
+    float: inline-start;
+}
+#beto{
+    width: 70%;
+    float: inline-end;
+}
+#comidas{
+    width: 70%;
+    float: inline-start;
+}
+#cataratas{
+    width: 70%;
+    float: inline-end;
+}
+#amazonas{
+    width: 70%;
+    float: inline-start;
+}
+#carnaval{
+    width: 70%;
+    float: inline-end;
+}
