--- a/museo guardar.css
+++ b/museo guardar.css
@@ -39,7 +39,7 @@ body{
     position: absolute;
     width: 800px;
     margin-top: -40px;
-    justify-content: center;
+    justify-content: left;
     display: flex;
 }
 .m-btn{
