--- a/main.css
+++ b/main.css
@@ -1,6 +1,15 @@
 body{
     background-color: rgb(148, 148, 62);
 }
+
+*{
+    font-family: "Cabin", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
 .nav {
     display: flex;
     background-color: rgb(204, 165, 106);
