se realizo el formulario en el archivo contactos.html

--- a/main.css
+++ b/main.css
@@ -80,11 +80,15 @@ body{
     padding: 5px;
 }
 .der{
+    flex-direction: row;
+    justify-content: space-between;
     float: inline-start;
     align-items: start;
     position: relative;
 }
 .izq{
+    flex-direction: row;
+    justify-content: space-between;
     float: inline-end;
     align-items: end;
     position: relative;
