--- a/main.css
+++ b/main.css
@@ -113,3 +113,10 @@ h3{
     justify-content: flex-start;
     list-style-type: none;
 }
+.lista_footer{
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    color: white;
+}
