se centro el nav

--- a/main.css
+++ b/main.css
@@ -16,6 +16,8 @@ body{
     height: 40px;
     align-items: center;
     justify-content: center;
+    padding-right: 50px;
+    
 }
 .nav ul {
     margin: 0 10px;
