--- a/contacto.css
+++ b/contacto.css
@@ -1,16 +1,91 @@
 body{
-    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
-    height: 100%;
-    width: 100%;
-}  
-#contenedor{
-    text-align: center;
-    height: 60vh;
-    width: 50vh;
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
+    display: flex;
     align-items: center;
-    margin: auto;
-    padding: 5px;
-    margin-top: 100px;
+    justify-content: center;
+}
+
+form{
+    padding: 50px 55px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    text-align: center;
+    width: 340px;   
+}
+
+.input-group{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+h2{
+    color: #283629;
+    font-size: 35px;
+}
+
+label{
+    color: #283629;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+input, textarea{
+    padding: 17px 25px;
+    border-radius: 25px;
+    margin-bottom: 20;
+    background-color: #edfffe;
+    border: 2px solid #f0faf1;
+    color: #283629;
+    outline: none;
+}
+
+
+input::placeholder, textarea::placeholder{
+    color: #b5cab6;
+}
+
+.form-txt{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.form-txt a{
+    color: #76b28e;
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.btn{
+    font-size: 16px;
+    color: #ffffff;
+    border: 0;
+    border-radius: 25px;
+    background-color: #51d94c;
+    box-shadow: 0 0 20px rgba(25, 254,0, 0.4);
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: #50e04b;
+}
+
+
+@media(max-width:991px){
+    body{
+        padding: 30px;
+    }
+
+    form{
+        padding: 50px 30px;
+        width: 100%;
+    }
+    input{
+        padding: 15px;
+    }
 }
