--- a/museo.css
+++ b/museo.css
@@ -5,9 +5,20 @@
     justify-content: center;
     text-align: center;
 }
-.nav{
+.nav {
+    display: flex;
+    background-color: rgb(175, 133, 69);
+    height: 40px;
+    align-items: center;
     justify-content: center;
-    text-align: center;
+    padding-right: 50px;
+}
+.nav ul {
+    margin: 0 10px;
+    list-style-type: none;
+    list-style: none;
+    display: flex;
+    gap: 50px;
 }
 img{
     width: 20%;
