--- a/main.css
+++ b/main.css
@@ -104,6 +104,7 @@ body{
     padding: 5px;
     width: 80%;
     margin: 0 auto;
+    margin-bottom: -25px;
 }
 h2{
     text-decoration: underline;
@@ -131,4 +132,5 @@ h3{
     justify-content: center;
     gap: 50px;
     color: white;
+    margin-top: -15px;
 }
