--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -52,6 +52,7 @@ input::placeholder, textarea::placeholder{
     display: flex;
     justify-content: space-between;
     text-align: center;
+    padding: 10px;
 }
 
 .form-txt a{
